--- a/web_static/product-form.css
+++ b/web_static/product-form.css
@@ -14,23 +14,23 @@ body, html {
 
 .top-section {
   width: 100%;
-  height: 25%;
+  height: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
+  margin-bottom: -25px;
+  /* justify-content: space-between;
+  align-items: center; */
   background-color: #f2f2f2;
+  /* padding: 0 30px; */
 }
 
 .bottom-section {
   width: 100%;
-  height: 75%;
+  height: 0%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0;
-  padding: 0 20px; /* Add padding to adjust spacing inside the bottom section */
-  box-sizing: border-box; /* Include padding in the element's total width */
+  /* margin: 0;
+  padding: 0 30px; */
 }
 
 .welcome-message {
@@ -38,16 +38,29 @@ body, html {
 }
 
 .welcome-message p {
-  font-size: 18px;
+  font-size: 50px;
+  margin-left: 30px;
+  color: green;
+  font-family: 'Poppins', sans-serif;
 }
 
 .profile-image {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
+  margin-right: 350px;
+  margin-top: 50px;
+  color: green;
 }
 
 .profile-image label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 2px dashed #ccc;
   cursor: pointer;
 }
 
@@ -115,4 +128,32 @@ body, html {
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+}
+
+/* css for product image */
+
+.product-image {
+  display: flex;
+  color: green;
+}
+
+.product-image label {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 350px;
+  height: 250px;
+  border-radius: 5%;
+  border: 2px dashed green;
+  cursor: pointer;
+}
+
+.product-image img {
+  height: 200px;
+  width: 300px;
+  object-fit: cover;
+}
+
+.product-image input[type="file"] {
+  display: none;
 }
