--- a/api/v1/templates/home.html
+++ b/api/v1/templates/home.html
@@ -4,83 +4,107 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FarmLink</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-header.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/common.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/filters.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/font-awesome.css') }}">
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />-->
-
+    <title>FarmLink User Registration page</title>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
     
     <header>
-        <!--<div id="api_status"></div>-->
-
-        <h1 class="logo">farmlink</h1>
-        <nav class="navbar">
-            <ul class="navbar-menu">
-                <li class="navbar-item">
-                    <a href="{{ url_for('app_views.home_index') }}">Home</a>
-                </li>
-                <li class="navbar-item">
-                    <a href="{{ url_for('app_views.profile') }}">Profile</a>
-                </li>
-                <li class="navbar-item">
-                    <a href="{{ url_for('app_views.login_get') }}">Login</a>
-                </li>
-                <li class="navbar-item">
-                    <a href="{{ url_for('app_views.signup') }}">Sign Up</a>
-                </li>
-                <li class="navbar-item">
-                    <a href="{{ url_for('app_views.logout') }}">Logout</a>
-                </li>
-                
-            </ul>
+        <h2 class="logo">FarmLink</h2>
+        <form action="https://www.google.com/search" method="get" target="_blank" class="search-bar">
+            <input type="text" placeholder="Search FarmLink..." name="q">
+            <button type="submit"><img src="search.png"></button>
+        </form>
+        <nav class="navigation">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+            <button class="btnLogin-popup">Login</button>
         </nav>
-        
-
     </header>
-    <main>
-        <div class="container">
 
-            <!-- **********************
-                 FILTERS
-                 ********************** -->
-        
-            <section class="filters">
-        
-              <!-- **********************
-                   LOCATIONS
-                   ********************** -->
-        
-              <div class="locations">
-                <h3>Users</h3>
-                <h4>&nbsp;</h4>
-                <ul class="popover">
-                    {% for farmer in farmers|sort(attribute='username') %}
-                    <li>
-                        <h2>{{ farmer.username }}</h2>
-                        <ul>
-                            {% for product in farmer.products %}
-                            <li>{{ product.name }}</li>
-                            {% endfor %}
-                        </ul>
-                    </li>
-                    {% endfor %}
-                </ul>
-              </div>
-              
-              <button>Search</button>
-            </section>
-            <
+    <div class="wrapper">
+        <span class="icon-close"><ion-icon name="close"></ion-icon>
+        </span>
+        <div class="form-box login">
+            <h2>Login</h2>
+            <form action="dashboard.html" method="post" name="form" onsubmit="return validated()">
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input autocomplete="off" type="email" name="email">
+                    <label>Email</label>
+                    <p class="email_error">An email is required</p>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" name="password">
+                    <label>Password</label>
+                    <p class="pass_error">A password is required</p>
+                </div>
+                <div class="remember-forget">
+                    <label><input type="checkbox">Remember me</label>
+                    <a href="#">Forget Password?</a>
+                </div>
+                <button type="submit" class="btn">Login</button>
+                <div class="login-register">
+                    <p>Don't have an account? <a
+                        href="#"
+                        class="register-link">Register</a>
+                    </p>
+                </div>
+            </form>
+
         </div>
-    </main>
 
+        <div class="form-box register">
+            <h2>Registration</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="person"></ion-icon></span>
+                    <input type="text" required>
+                    <label>Username</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="remember-forget">
+                    <label><input type="checkbox"> I agree to the terms & conditions</label>
+                </div>
+                <button type="submit" class="btn">Register</button>
+                <div class="login-register">
+                    <p>Already have an account? <a
+                        href="#"
+                        class="login-link">Login</a>
+                    </p>
+                </div>
+            </form>
 
+        </div>
 
-    <script src="{{ url_for('static', filename='scripts/valid.js') }}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='scripts/home.js') }}"  type="text/javascript"></script>
+    </div>
+
+    <div class="form-box about">
+        <h2>Bringing Farms to your Fingertips</h2>
+        <img src="farm.jpeg" alt="Farm Image">
+        <p>Buy & Sell your farm products with FarmLink today.</p>
+        <div class="form-icon">
+            <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-medium"></ion-icon></a>
+          </div>
+      </div>
+      
+    <script src="valid.js"></script>
+    <script src="home.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
