Working on the admin page

--- a/api/v1/templates/landingpage.html
+++ b/api/v1/templates/landingpage.html
@@ -36,8 +36,8 @@
           <li>Messages</li>
           <li>Accounts</li>
           <li class="sign-in-btn">Sign Up</li>
-          <li>Login</li>
-          <li>Logout</li>
+          <li><a href="{{ url_for('app_views.login_get') }}">Login</a></li>
+          <li><a href="{{ url_for('app_views.logout') }}">Logout</li>
         </ul>
       </div>
     </div>
