--- a/api/v1/templates/login1.html
+++ b/api/v1/templates/login1.html
@@ -12,6 +12,7 @@
     <h3 class="title">Login</h3>
     <div class="box">
         <form method="POST" action="{{ url_for('app_views.login_post') }}">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <div class="field">
                 <div class="control">
                     <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="" required>
