--- a/api/v1/static/styles/dashboard.css
+++ b/api/v1/static/styles/dashboard.css
@@ -76,7 +76,7 @@
 }
 
 /* Buying Section */
-.buying-section {
+/* .buying-section {
   background-color: #f2f2f2;
   padding: 20px;
   margin-bottom: 20px;
@@ -109,7 +109,7 @@
   align-items: center;
 }
 
-/* Selling Section */
+
 .selling-section {
   background-color: #f2f2f2;
   padding: 20px;
@@ -122,9 +122,9 @@
   margin-bottom: 10px;
   font-family: 'Poppins', sans-serif;
   align-items: center;
-}
+} */
 
-.selling-section p {
+/* .selling-section p {
   font-size: 16px;
   margin-bottom: 20px;
   font-family: 'Poppins', sans-serif;
@@ -141,11 +141,11 @@
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
   align-items: center;
-}
+} */
 
 /* update and logout css*/
 
-.dropdown {
+/* .dropdown {
   display: none;
   position: absolute;
   top: 40px;
@@ -154,7 +154,7 @@
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   padding: 10px;
   z-index: 999;
-}
+} */
 
 .dropdown a {
   display: flex;
@@ -164,6 +164,6 @@
   margin-bottom: 10px;
 }
 
-.dropdown a img {
+.dropdown img {
   cursor: pointer;
-}
+} 
