--- a/api/v1/static/styles/home.css
+++ b/api/v1/static/styles/home.css
@@ -23,7 +23,8 @@ header {
         background: #fff;
         top: 0;
         left: 0;
-        width: 100%;
+        height: 15%;
+        width: 95%;
         padding: 5px 25px;
         display: flex;
         justify-content: space-between;
