--- a/api/v1/templates/home.html
+++ b/api/v1/templates/home.html
@@ -5,19 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FarmLink User Registration page</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
 </head>
 <body>
     
     <header>
         <h2 class="logo">FarmLink</h2>
-<<<<<<< HEAD
         <!-- <form action="https://www.google.com/search" method="get" target="_blank" class="search-bar">
             <input type="text" placeholder="Search FarmLink..." name="q">
             <button type="submit"><img src="search.png"></button>
         </form> -->
         <nav class="navigation">
-            <a href="#">Home</a>
+            <a href="{{ url_for('app_views.home_index') }}">Home</a>
             <!-- <a href="#">About</a>
             <a href="#">Services</a>
             <a href="#">Contact</a>
@@ -26,92 +25,25 @@
     </header>
 
     <div class="wrapper">
-        <span class="icon-close"><ion-icon name="close"></ion-icon>
-        </span>
-        <div class="form-box login">
-            <h2>Login</h2>
-            <form action="{{ url_for('app_views.login_post') }}" method="post" name="form" onsubmit="return validated()">
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input autocomplete="off" type="email" name="email">
-                    <label>Email</label>
-                    <p class="email_error">An email is required</p>
-                </div>
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" name="password">
-                    <label>Password</label>
-                    <p class="pass_error">A password is required</p>
-                </div>
-                <div class="remember-forget">
-                    <label><input type="checkbox">Remember me</label>
-                    <a href="#">Forget Password?</a>
-                </div>
-                <button type="submit" class="btn">Login</button>
-                <div class="login-register">
-                    <p>Don't have an account? <a
-                        href="#"
-                        class="register-link">Register</a>
-                    </p>
-                </div>
-            </form>
-
+        
+        
+        <div class="form-box about">
+            <!-- <span class="icon-close"><ion-icon name="close"></ion-icon>
+            </span> -->
+            <h2>Bringing Farms to your Fingertips</h2>
+            <img src="{{ url_for('static', filename='image/farm.jpeg') }}" alt="Farm Image">
+            <p>Buy & Sell your farm products with FarmLink today.</p>
+            <div class="form-icon">
+                <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-medium"></ion-icon></a>
+            </div>
         </div>
-
-        <div class="form-box register">
-            <h2>Registration</h2>
-            <form action="#">
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="person"></ion-icon></span>
-                    <input type="text" required>
-                    <label>Username</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" required>
-                    <label>Email</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" required>
-                    <label>Password</label>
-                </div>
-                <div class="remember-forget">
-                    <label><input type="checkbox"> I agree to the terms & conditions</label>
-                </div>
-                <button type="submit" class="btn">Register</button>
-                <div class="login-register">
-                    <p>Already have an account? <a
-                        href="#"
-                        class="login-link">Login</a>
-                    </p>
-                </div>
-            </form>
-
-        </div>
-
     </div>
-
-=======
-        <nav class="navigation">
-            <a href="{{ url_for('app_views.home_index') }}">Home</a>
-        </nav>
-    </header>
-
->>>>>>> 3ecea46af6c098590df0f4d0a85bf2aa41c073db
-    <div class="form-box about">
-        <h2>Bringing Farms to your Fingertips</h2>
-        <img src="farm.jpeg" alt="Farm Image">
-        <p>Buy & Sell your farm products with FarmLink today.</p>
-        <div class="form-icon">
-            <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-medium"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-github"></ion-icon></a>
-          </div>
-          
-      </div>
+      
+    <script src="valid.js"></script>
+    <script src="home.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
