--- a/api/v1/templates/home.html
+++ b/api/v1/templates/home.html
@@ -10,7 +10,10 @@
 <body>
     
     <header>
-        <h2 class="logo">FarmLink</h2>
+        <div class="logo-container">
+            <img src="logo.jpg" alt="FarmLink Logo" class="logo-image">
+            <h2 class="logo">FarmLink</h2>
+        </div>
         <!-- <form action="https://www.google.com/search" method="get" target="_blank" class="search-bar">
             <input type="text" placeholder="Search FarmLink..." name="q">
             <button type="submit"><img src="search.png"></button>
