--- a/api/v1/static/styles/home.css
+++ b/api/v1/static/styles/home.css
@@ -36,6 +36,30 @@ header {
         font-size: 1.5em;
         color: red;
         user-select: none;
+        display:flex;
+}
+
+.logo-text {
+        font-size: 1.5em;
+        color: red;
+        font-family: cursive;
+        margin-top: 10px;
+}
+
+.logo-image {
+  width: 70px; /* Adjust the width and height as needed */
+  height: 70px;
+  margin-right: 5px; /* Adjust the margin as needed */
+  object-fit: contain;
+  filter: brightness(-50);
+
+  background-color: #fff;
+  transition: all 0.3s ease; /* Add the transition property */
+}
+.logo-image:hover {
+  transform: scale(1.2); /* Apply a scale transformation on hover */
+  opacity: 0.8; /* Reduce the opacity on hover */
+  box-shadow: 4px
 }
 
 .navigation a {
