--- a/api/v1/static/styles/landingpage.css
+++ b/api/v1/static/styles/landingpage.css
@@ -41,15 +41,27 @@ body {
   cursor: pointer;
 }
 
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .product-box {
-  width: 200px;
+  width: 23.33%;
+  height: 35%;
   background-color: #ffffff;
-  margin: 20px;
+  margin: 30px;
   padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
   display: flex;
   flex-direction: column;
+
+  float: left;
+}
+
+.clearfix {
+  clear: both;
 }
 
 .product-box img {
