--- a/api/v1/templates/home.html
+++ b/api/v1/templates/home.html
@@ -10,9 +10,13 @@
 <body>
     
     <header>
-        <div class="logo-container">
-            <img src="logo.jpg" alt="FarmLink Logo" class="logo-image">
-            <h2 class="logo">FarmLink</h2>
+        <div class="logo">
+            <div class="main-logo">
+                <img src="{{ url_for('static', filename='image/logo.jpg') }}" alt="FarmLink Logo" class="logo-image">
+            </div>
+            
+            <h2 class="logo-text">farmlink</h2>
+            
         </div>
         <!-- <form action="https://www.google.com/search" method="get" target="_blank" class="search-bar">
             <input type="text" placeholder="Search FarmLink..." name="q">
